# helm-python

./: .gitignore  README.md  main.py  pyproject.toml
examples/: README.md
examples/01-getting-started/: CLAUDE.md  README.md  main.py
examples/02-permissions/: CLAUDE.md  README.md  interactive.py  main.py
examples/03-code-mode/: CLAUDE.md  README.md  main.py
examples/04-mcp-server/: CLAUDE.md  README.md  claude_desktop_config.json  server.py
examples/05-chat-client/: README.md  chat.py  client.py
examples/06-custom-skills/: CLAUDE.md  main.py  weather_skill.py
examples/07-openapi-skill/: CLAUDE.md  README.md  main.py  petstore_spec.json
examples/08-github-openapi/: CLAUDE.md  README.md  main.py
examples/09-github-code-mode/: CLAUDE.md  README.md  main.py
examples/10-github-explorer/: CLAUDE.md  README.md  analysis_skill.py  main.py
examples/11-github-mcp-server/: CLAUDE.md  README.md  claude_desktop_config.json  server.py
examples/shared/: README.md  github_spec.json
src/fairlead/: __init__.py  __main__.py  _exec.py  _fairlead.py  _mcp_cli.py  _mcp_server.py  _permissions.py  _search.py  _skill.py  _trace.py  _types.py
src/fairlead/skills/: __init__.py  (+8 more)
src/helm/: __init__.py  __main__.py  _helm.py  _mcp_cli.py  _mcp_server.py  _permissions.py  _search.py  _skill.py  _types.py
tests/: test_call.py  test_exec.py  test_fairlead.py  test_helm.py  test_mcp_server.py  test_permissions.py  test_search.py  test_trace.py
tests/skills/: test_edit.py  test_fs.py  test_git.py  test_grep.py  test_http.py  test_module.py  test_openapi.py  test_shell.py
(+66 files in other folders)
